# GyroNet

./: .gitignore  LICENSE  MANIFEST.in  README.md  requirements.txt  setup.cfg
.github/workflows/: publish.yml
docs/: README.md  api_reference.md  input_format.md  quickstart.md  tiers.md
gyronet/: __init__.py  fetch.py  inference.py  posterior.py  predict.py  preprocess.py
gyronet/data/: cluster_stats.csv  logA_grid.npy
gyronet/models/: nsf.py  reweighting.py
gyronet/weights/: r4_kde.pkl  weights_baseline_all30.pth  weights_nsf_c_all30.pth  weights_r3_noise_sig.pth  weights_r3_phot_excess.pth
tests/: conftest.py  test_fetch.py  test_posterior.py  test_predict.py  test_preprocess.py
training/: README.md  build_age_grid.py  build_cluster_stats.py  eda_output_clean.csv
