[metadata]
name = gyronet
version = 0.1.0
author = Amit Dethe
author_email = 26amitdethe@gmail.com
description = Stellar age prediction via gyrochronology with Bayesian posterior reweighting
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/26amitdethe/GyroNet
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy

[options]
packages = find:
python_requires = >=3.10
include_package_data = True
install_requires =
    torch>=2.0
    zuko>=1.0
    numpy>=1.24
    pandas>=1.5
    scipy>=1.10
    scikit-learn>=1.2
    astroquery>=0.4.6
    matplotlib>=3.6

[options.packages.find]
exclude =
    tests*
    training*
    research*
    docs*

[options.package_data]
gyronet =
    weights/*.pth
    weights/*.pkl
    data/*.npy

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
filterwarnings =
    ignore::sklearn.exceptions.InconsistentVersionWarning
    ignore::DeprecationWarning:google.*
